crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__com_parsed_0.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
segments:
  - Text: "|EC|1|0|0|AMF|NT|FI|"
