crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__com_parsed_1.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
segments:
  - Text: "|BC|2|0|0|XM|NT|FI|"
