crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__gra_1.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
relations:
  - index: "1"
    head: "0"
    relation: ROOT
  - index: "2"
    head: "1"
    relation: PUNCT
