crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__id_0.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: parsed
---
language: eng
corpus: Lyon
speaker: SIL
age: ""
sex: ""
group: ""
ses: ""
role: LENA
education: ""
custom_field: Silence
